syntax = "proto3";

package turnly.tenancy.v1.organizations;

message GetOrganizationRequest {
  string id = 1;
}

message GetOrganizationBySubdomainRequest {
  string subdomain = 1;
}
